# compute

./: .cursorrules  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  todo.md
.github/workflows/: ci.yml
bindings/python/: CMakeLists.txt  core_bind.cpp  linalg_bind.cpp
cmake/: CUDAConfig.cmake  CompilerOptions.cmake  PythonBindings.cmake
docs/diagrams/: gpu-dispatch.excalidraw
docs/journal/: 2026-06-29.md
include/compute/: core.hpp  linalg.hpp
include/compute/backends/: gpu_backend.hpp
include/compute/core/: aligned_buffer.hpp  compute_policy.hpp  error.hpp  simd_traits.hpp  version.hpp
include/compute/linalg/: add.hpp  dot.hpp  gemm.hpp  gemv.hpp  hadamard.hpp  layout.hpp  norm_fro.hpp  norm_inf.hpp  scale.hpp  sub.hpp  trace.hpp  transpose.hpp
include/compute/linalg/detail/: elementwise.hpp  gpu_dispatch.hpp  route.hpp
obsidian/: DSA.md  Linear Algebra.md  README.md  References.md
obsidian/dsa/: Tier 1 - Memory Aware Foundations.md  Tier 2 - Trees & Range Structures.md  Tier 3 - Graph Algorithms.md  Tier 4 - Sorting & Order Statistics.md  Tier 5 - Advanced & Amortized.md  Tier 6 - Paradigms & Complexity.md  Tier 7 - GPU Parallel DSA.md
obsidian/linalg/: Tier 1 - Fundamentals.md  Tier 2 - Performance.md  Tier 3 - Decompositions.md  Tier 4 - Eigenvalues & Solvers.md  Tier 5 - GPU.md
obsidian/modules/: Combinatorics.md  Numerical Analysis.md  ODE Solvers.md  PDE.md  Probability Theory.md  Statistical Analysis.md
scripts/python/: demo_linalg.py
scripts/python/compute/: __init__.py
src/compute/: CMakeLists.txt
src/compute/core/: compute_policy.cpp
src/compute/cuda/: CMakeLists.txt
src/compute/cuda/detail/: context.cpp  context.hpp
src/compute/cuda/linalg/: kernels.cu  kernels.cuh  linalg_dispatch.cpp
src/compute/linalg/: CMakeLists.txt  add.cpp  dot.cpp  gemm.cpp  gemv.cpp  hadamard.cpp  layout.cpp  norm_fro.cpp  norm_inf.cpp  scale.cpp  sub.cpp  trace.cpp  transpose.cpp
src/compute/linalg/dispatch/: gpu_dispatch.cpp
src/compute/metal/: CMakeLists.txt  stub.cpp
src/compute/metal/detail/: context.h  context.mm  kernels_source.h.in
src/compute/metal/linalg/: kernels.metal  linalg_dispatch.mm
src/compute/vulkan/: CMakeLists.txt  stub.cpp
src/compute/vulkan/shaders/: elementwise.comp  gemm.comp  transpose.comp
tests/bench/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_core.cpp  test_linalg.cpp  test_linalg_gpu.cpp
