# Benchmarks added per week alongside the module they exercise.
# Google Benchmark is fetched via FetchContent in the root CMakeLists.txt.

# Week 2 example (uncomment when linalg module is compiled):
# add_executable(bench_linalg bench_linalg.cpp)
# target_link_libraries(bench_linalg PRIVATE benchmark::benchmark compute_linalg)
